--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^13.10.0",
     "react-native-toast-message": "^2.1.6"
   },
@@ -28,6 +29,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-sqlite-storage": "^6.0.0",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
